...
	
	init() {
		loadDefaultMenu()
	}
	
	mutating func loadDefaultMenu() {
		if let path = Bundle.main.path(forResource: "Menu", ofType: "plist") {
			loadMenu(path: path)
		} else {
			assertionFailure("Could not load default menu")
		}
	}
	
...
